Fixed layout problem on tablet. Added * to sources.

--- a/css/interactive.css
+++ b/css/interactive.css
@@ -459,7 +459,7 @@ Smartphone Styles
 		top: 0px;
 		left: 0px;
 		width: 320px;
-		height: 1370px;
+		height: 1450px;
 		margin: 0 auto;
 		background-color: rgba(255, 255, 255, 1);
 		font-family: Frank;
@@ -543,7 +543,7 @@ Smartphone Styles
 		cursor: pointer;
 	}
 	#menu .nav .button:last-child {
-		width: 64px;
+		width: 63px;
 	}
 
 	/* Dials Styles */
@@ -705,6 +705,16 @@ Smartphone Styles
 		width: 60px;
 		height: 16px;
 		text-align: left;
+	}
+	#footer {
+		position: absolute;
+		top: 1360px;
+		width: 320px;
+		height: 50px;
+		font-family: Frank-Light;
+		font-size: 12px;
+		text-align: justify;
+		color: #a8a8a8;
 	}
 }
 
